
* urban-1 (dev)
 - Added: Support for key-based (API) authentication on PDO backend
 - Added: ChangeLog
 - Changed: PDO config to support dynamic DB configuration (optionally)
 - Added: GetAllUsers function to return username/id list (used for GUIs)