@@ -53,6 +53,7 @@ CREATE TABLE "ul_apikeys" (
   "count" int(3) NOT NULL DEFAULT '0',
   "blockedcount" int(1) NOT NULL DEFAULT 0,
   "tstamp" varchar(27) CHARACTER SET ascii NOT NULL DEFAULT '01-01-2000 00:00:00.000000',
+  "block_expires" varchar(26) CHARACTER SET ascii NOT NULL,
   PRIMARY KEY ("id"),
   UNIQUE KEY "key" ("key"),
   FOREIGN KEY ("uid") REFERENCES "ul_logins"("id") ON DELETE CASCADE ON UPDATE CASCADE
